--- a/_config.yml
+++ b/_config.yml
@@ -93,7 +93,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Myunghun Kim"
+  name             : Myunghun Kim
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "I am an **amazing** person."
   location         : "POSTECH"
