--- a/_config.yml
+++ b/_config.yml
@@ -93,11 +93,11 @@ analytics:
 
 # Site Author
 author:
-  name             : Myunghun Kim
+  name             : "Myunghun Kim"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "I am an **amazing** person."
   location         : "POSTECH"
-  email            : "mustbestar@gmail.com
+  email            : "mustbestar@gmail.com"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
